<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegister.LoginActivity"
    android:padding="16dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_message_black_24dp"/>

            <TextView
                android:id="@+id/text1"
                android:layout_below="@id/img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lets_start_chatting"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:textColor="#525252"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_below="@id/text1"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:hint="@string/e_g_a_mail_com"
                android:background="@drawable/inputs"
                android:padding="6dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="6dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_below="@id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:hint="@string/password"
                android:background="@drawable/inputs"
                android:padding="6dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="6dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_below="@id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textAlignment="viewEnd"
                android:text="@string/forget_password"
                android:textSize="13sp"
                android:textStyle="bold|normal"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/btLogin"
                android:layout_below="@id/tvForgetPassword"
                android:layout_marginTop="16dp"
                android:padding="6dp"
                android:text="Sign in"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"/>

            <Button
                android:id="@+id/btLoginWithPhone"
                android:layout_below="@id/btLogin"
                android:layout_marginTop="16dp"
                android:padding="6dp"
                android:text="@string/sign_in_with_phone_number"
                android:drawablePadding="-15dp"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"/>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/btLoginWithPhone"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tvRegister"
                android:layout_below="@id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/create_a_nnew_account"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

<!--            <TextView-->
<!--                android:id="@+id/tvLoginUsing"-->
<!--                android:layout_below="@id/tvRegister"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:text="or Login with your"-->
<!--                android:textAlignment="center"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:textColor="#B6B5B5"/>-->



        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>