<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenusAct.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/app_bar_layout"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgeProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_account_circle_black_24dp"
                app:civ_border_width="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/imgeProfile">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_account_box_black_24dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textStyle="normal"
                        android:textSize="18sp"
                        android:textColor="#525252"/>

                    <EditText
                        android:id="@+id/etUname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:padding="16dp"
                        android:inputType="textMultiLine"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:background="@android:color/transparent"
                        android:textStyle="normal"/>

                    <View
                        android:layout_marginBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ll1">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_info_outline_black_24dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textStyle="normal"
                        android:textSize="18sp"
                        android:textColor="#525252"/>

                    <EditText
                        android:id="@+id/etStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/status"
                        android:padding="16dp"
                        android:inputType="textMultiLine"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:background="@android:color/transparent"
                        android:textStyle="normal"/>

                    <View
                        android:layout_marginBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimaryDark"/>

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_below="@id/ll2"
                android:background="@drawable/buttons"
                android:text="@string/update"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>






</RelativeLayout>